--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,15 @@ nav li {
 }
 main {
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
+}
+a {
+    text-decoration: none;
+    color: cornflowerblue; 
+    font-size: 20px;
+}
+a:hover {
+    color: gray;
 }
 img {
     width: 30%;
