--- a/css/common.css
+++ b/css/common.css
@@ -1,23 +1,29 @@
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
 
-a:hover {
-    color: gray;
-}
+a { text-decoration: none; }
+a:link{ color: #000; }
+a:visited{ color: #000; }
+a:hover{ color: #000; }
+a:active{ color: #000; }
 
 .hide {
     display: none;
 }
 
+body{
+    font-family: 'Pretendard';
+}
 
 header {
     position: fixed;
     top: 0;
     left: 50%;
     margin-left: calc(100vw * -50 / 1920);
+    z-index: 3;
 }
 h1 {
     text-align: center;
-    font-family: 'Pretendard';
     font-weight: 600;
     font-size: calc(100vw * 40 / 1920);
     line-height: calc(100vw * 80 / 1920);
@@ -29,9 +35,11 @@ nav {
     right: 0;
     transform-origin: -50%, -50%;
     border: calc(100vw * 3 / 1920) solid #000;
+    margin-right: calc(100vw * -3 / 1920);
     padding: calc(100vw * 10 / 1920);
-    background: rgba(255, 255, 255, 0.4);
-    z-index: 3;
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(2px);
+    border-radius: 5% 0% 0% 5%;
 }
 nav li {
     list-style: none;
@@ -46,7 +54,6 @@ footer {
     margin-top: calc(100vw * 80 / 1920);
     text-align: center;
     padding: calc(100vw * 100 / 1920) calc(100vw * 200 / 1920);
-    font-family: 'Pretendard';
     font-weight: 500;
     font-size: calc(100vw * 18 / 1920);
     line-height: calc(100vw * 24 / 1920);
