--- a/css/index.css
+++ b/css/index.css
@@ -1,27 +1,27 @@
 #main {
     text-align: center;
     height: calc(100vw * 900 / 1920);
-    padding-top: calc(100vw * 121 / 1920);
+    padding-top: calc(100vw * 200 / 1920);
 }
 #main h2 {
     font-style: normal;
     font-weight: 600;
-    font-size: calc(100vw * 50 / 1920);
+    font-size: calc(100vw * 44 / 1920);
     line-height: calc(100vw * 60 / 1920);
 }
 .name_line {
-    margin-top: calc(100vw * 70 / 1920);
+    margin-top: calc(100vw * 100 / 1920);
 }
 .name_line svg {
     width: 100%;
 }
 .path0 {
-    stroke-dasharray: 6224.53466796875;
-    stroke-dashoffset: 6224.53466796875;
-    animation: name 1.0s linear forwards;
+    stroke-dasharray: 4140.10693359375;
+    stroke-dashoffset: 4140.10693359375;
+    animation: name 1.3s linear forwards;
 }
 @keyframes name {
-    0% {stroke-dashoffset: 6224.53466796875;}
+    0% {stroke-dashoffset: 4140.10693359375;}
     100% {stroke-dashoffset: 0;}
 }
 
@@ -36,15 +36,20 @@
 }
 
 
-.content1 {
-    height: calc(100vw * 1088 / 1920);
+#about {
+    height: calc(100vw * 2088 / 1920);
 }
-.content1 svg {
-    top: calc(100vw * 870 / 1920);
-    left: calc(100vw * 30 / 1920);
+.about_line {
+    top: calc(100vw * 980 / 1920);
+    left: calc(100vw * 130 / 1920);
+    width: calc(100vw * 1616 / 1920);
+    height: calc(100vw * 1886 / 1920);
+}
+.path1 {
+    transition: all .4s ease-in-out;
 }
 .profile {
-    height: 100%;
+    height: calc(100vw * 1088 / 1920);
     position: relative;
     font-family: 'Pretendard';
 }
@@ -53,7 +58,7 @@
     position: absolute;
 }
 .profile_left {
-    left: 25%;
+    left: 23%;
     top: 25%;
     text-align: center;
     font-family: 'Reenie Beanie';
@@ -61,7 +66,68 @@
 }
 .profile_left img {
     display: block;
+    width: 100%;
     margin-bottom: calc(100vw * 30 / 1920);
+}
+.profile_left .profile1 {
+    position: absolute;
+    top: calc(100vw * 40 / 1920);
+    left: calc(100vw * 100 / 1920);
+    width: calc(100vw * 42 / 1920);
+    z-index: 2;
+}
+.profile_left .profile_path1 {
+    stroke-dasharray: 100;
+    stroke-dashoffset: 100;
+    transition: all 1s ease-in-out;
+}
+.profile_left .profile2 {
+    position: absolute;
+    top: calc(100vw * 40 / 1920);
+    left: calc(100vw * 200 / 1920);
+    width: calc(100vw * 41 / 1920);
+    z-index: 2;
+}
+.profile_left .profile_path2 {
+    stroke-dasharray: 100;
+    stroke-dashoffset: 100;
+    transition: all 1s ease-in-out;
+}
+.profile_left .profile3 {
+    position: absolute;
+    top: calc(100vw * 125 / 1920);
+    left: calc(100vw * 140 / 1920);
+    width: calc(100vw * 18 / 1920);
+    z-index: 2;
+}
+.profile_left .profile_path3 {
+    stroke-dasharray: 200;
+    stroke-dashoffset: 200;
+    transition: all 2s ease-in-out;
+}
+.profile_left .profile4 {
+    position: absolute;
+    top: calc(100vw * 350 / 1920);
+    left: calc(100vw * 0 / 1920);
+    width: calc(100vw * 50 / 1920);
+    z-index: 2;
+}
+.profile_left .profile_path4 {
+    stroke-dasharray: 200;
+    stroke-dashoffset: 200;
+    transition: all .5s ease-in-out;
+}
+.profile_left .profile5 {
+    position: absolute;
+    top: calc(100vw * 480 / 1920);
+    left: calc(100vw * 70 / 1920);
+    width: calc(100vw * 220 / 1920);
+    z-index: 2;
+}
+.profile_left .profile_path5 {
+    stroke-dasharray: 300;
+    stroke-dashoffset: 300;
+    transition: all 1s ease-in-out;
 }
 .profile_left a {
     font-family: 'Pretendard';
@@ -85,45 +151,38 @@
 }
 .profile_right h2 {
     width: calc(100vw * 460 / 1920);
-    font-weight: 400;
+    font-weight: 600;
     font-size: calc(100vw * 36 / 1920);
-    line-height: calc(100vw * 43 / 1920);
     margin-top: calc(100vw * 6 / 1920);
     margin-bottom: calc(100vw * 35 / 1920);
 }
 .profile_right h2 span {
-    font-weight: 700;
+    font-weight: 800;
     font-size: calc(100vw * 40 / 1920);
-    line-height: calc(100vw * 48 / 1920);
+    line-height: calc(100vw * 50 / 1920);
     color: #487AC0;
 }
 .profile_right p {
-    width: calc(100vw * 514 / 1920);
+    width: calc(100vw * 525 / 1920);
     font-weight: 400;
-    font-size: calc(100vw * 24 / 1920);
+    font-size: calc(100vw * 20 / 1920);
     line-height: calc(100vw * 34 / 1920);
 }
 .profile_right p:last-of-type {
     margin-top: calc(100vw * 380 / 1920);
-    width: calc(100vw * 544 / 1920);
+    width: calc(100vw * 550 / 1920);
 }
 .profile_right p span {
     font-weight: 700;
-    font-size: calc(100vw * 24 / 1920);
-    line-height: calc(100vw * 29 / 1920);
+    font-size: calc(100vw * 20 / 1920);
+    line-height: calc(100vw * 24 / 1920);
     color: #487AC0;
 }
 
 
-.content2 {
-    height: calc(100vw * 1000 / 1920);
-}
-.content2 svg {
-    top: calc(100vw * 1949.5 / 1920);
-    left: calc(100vw * 28 / 1920);
-}
 .history {
     position: relative;
+    height: calc(100vw * 1000 / 1920);
     font-weight: 400;
     font-size: calc(100vw * 20 / 1920);
     line-height: calc(100w * 30 / 1920);
@@ -137,7 +196,7 @@
 }
 .history_left {
     position: absolute;
-    left: 15%;
+    left: 18%;
 }
 .history_left div:nth-of-type(1) {
     margin-top: calc(100vw * 80 / 1920);
@@ -168,27 +227,68 @@
 
 
 
-.content3 svg {
-    top: calc(100vw * 3071.5 / 1920);
-    left: calc(100vw * 943.7 / 1920);
+.content2 {
+    padding: calc(100vw * 200 / 1920) calc(100vw * 300 / 1920);
 }
-.content4 svg {
-    top: calc(100vw * 5233 / 1920);
-    left: calc(100vw * 152.95 / 1920);
+.skill h2 {
+    font-size: calc(100vw * 40 / 1920);
+    margin-bottom: calc(100vw * 50 / 1920);
 }
-.content5 svg {
-    top: calc(100vw * 6310.5 / 1920);
-    left: calc(100vw * 173 / 1920);
+.skill_tab {
+    display: flex;
 }
-.content6 svg {
-    top: calc(100vw * 7393 / 1920);
-    left: calc(100vw * 161 / 1920);
+.skill_tab li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: calc(100vw * 150 / 1920);
+    height: calc(100vw * 40 / 1920);
+    color: #aaa;
+    font-weight: 800;
+    border-right: calc(100vw * 2 / 1920) solid #aaa;
+    cursor: pointer;
 }
-.content7 svg {
-    top: calc(100vw * 8473.5 / 1920);
-    left: calc(100vw * 132.5 / 1920);
+.skill_tab li:hover {
+    color: #487AC0;
 }
-.content8 svg {
-    top: calc(100vw * 9555 / 1920);
-    left: calc(100vw * 75 / 1920);
+.skill_tab li.active {
+    color: #000;
+}
+.skill_tab li:last-of-type {
+    border-right: none;
+}
+
+.skill_con {
+    position: relative;
+    margin-top: calc(100vw * 20 / 1920);
+    height: calc(100vw * 600 / 1920);
+    border-top: #000 solid calc(100vw * 2 / 1920);
+}
+.skill_con li {
+    display: flex;
+    flex-wrap: wrap;
+    opacity: 0;
+    position:absolute;
+    width: 100%;
+    transition: opacity .3s;
+}
+.skill_con li.active {
+    opacity: 1;
+}
+.skill_con li>div {
+    display: flex;
+    align-items: center;
+    width: 33%;
+    margin: calc(100vw * 40 / 1920) calc(100vw * 2 / 1920);
+    padding: 0 calc(100vw * 10 / 1920);
+}
+.skill_con li div img {
+    margin-right: calc(100vw * 30 / 1920);
+}
+.skill_con li div {
+    line-height: calc(100vw * 24 / 1920);
+}
+.skill_con li div h3 {
+    font-size: calc(100vw * 24 / 1920);
+    margin-bottom: calc(100vw * 10 / 1920);
 }
