--- a/css/index.css
+++ b/css/index.css
@@ -286,6 +286,7 @@
     display: flex;
     align-items: center;
     width: 33%;
+    height: calc(100vw * 100 / 1920);
     margin: calc(100vw * 40 / 1920) calc(100vw * 2 / 1920);
     padding: 0 calc(100vw * 10 / 1920);
 }
@@ -307,6 +308,7 @@
 }
 .skill_con li div div {
     font-size: calc(100vw * 18 / 1920);
+    opacity: 1;
 }
 
 
@@ -378,38 +380,43 @@
     height: 100vh;
     overflow-y: scroll;
     background: #fff;
-    z-index: 2;
+    z-index: 5;
 }
-.work_info img {
+.work_info a img {
     position: fixed;
-    width: 50%;
-    top: 20%;
-    
+    width: 44%;
+    top: 25%;
+    left: 5%;
 }
 .work_text {
     position: absolute;
-    top: 20%;
+    top: 25%;
     left: 55%;
-    width: 50%;
+    width: 39%;
     padding-bottom: calc(100vw * 70 / 1920);
 }
 .work_text h2 {
     font-size: calc(100vw * 32 / 1920);
+    padding-bottom: calc(100vw * 20 / 1920);
+    border-bottom: #000 calc(100vw * 1 / 1920) solid;
 }
 .work_text h3 {
     font-size: calc(100vw * 24 / 1920);
     margin-top: calc(100vw * 40 / 1920);
+    padding-bottom: calc(100vw * 20 / 1920);
+    border-bottom: #000 calc(100vw * 1 / 1920) solid;
 }
 .work_text p {
-    width: 75%;
+    width: 100%;
     margin-top: calc(100vw * 20 / 1920);
     line-height: 1.5em;
     font-size: calc(100vw * 18 / 1920);
+    padding: calc(100vw * 20 / 1920) 0;
 }
 .work_text img {
     position: relative;
     margin-top: calc(100vw * 20 / 1920);
-    width: 75%;
+    width: 100%;
 }
 .back_btn {
     position: fixed;
